# agenticbalancebot

./: .editorconfig  .gitignore  BalanceBot_PanelReview.md  CLAUDE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
Archive/: BalanceBot1.txt
Balancebot_code/: Makefile  platformio.ini  pyproject.toml
Balancebot_code/docs/: commissioning_plan.md  sign_conventions.md  system_model.md
Balancebot_code/messungen/: pid_20260410_183701.csv  pid_20260410_184142.csv
Balancebot_code/python/: acquire.py  analyze.py  config.py  plot_csv.py  plot_pid_live.py  plot_sensor_live.py  plot_serial.py  process.py  requirements.txt  serial_to_csv.py
Balancebot_code/src/: balance.cpp  diagnose.cpp.bak  encoder_test.cpp.bak  main.cpp.bak  motor_test.cpp.bak  sensor_test.cpp.bak
Balancebot_code/src/balance/: config.h  encoder.cpp  encoder.h  imu.cpp  imu.h  logger.cpp  logger.h  main.cpp  motor.cpp  motor.h  pid.cpp  pid.h  state_machine.h
Balancebot_code/src/tests/carrier_timing/: main.cpp
Balancebot_code/src/tests/deadzone_id/: main.cpp
Balancebot_code/src/tests/imu_latency/: main.cpp
CAD_BalanceBot/: CoM_analysis.py  Pololu 90mm Wheel.dwg  Pololu_Wheel_90x10.20260412-120000.FCBak  Pololu_Wheel_90x10.20260412-162918.FCBak  Pololu_Wheel_90x10.FCStd  Samsung INR18650-25R.stp  User Library-18650 Full.STEP  assemble.py  carrierV4.FCStd  create_wheel.py  motorhalter_lose.FCStd
Knowledg/: Scherpunkt_des_Balancebot_erklaerung.md
docs/adr/: 0001-modular-firmware-layout.md  0002-messungen-storage-split.md  0003-max-duty-45-percent.md  README.md  (+5 more)
(+3 files in other folders)
